remove some vestigal styles so that test deployment looks ok

--- a/wild-thyme/wasm/index.html
+++ b/wild-thyme/wasm/index.html
@@ -4,13 +4,14 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta name="viewport" content="width=device-width" />
     <title>And We Had a Wild Thyme</title>
-    <link rel="stylesheet" type="text/css" href="css/splitting.css" />
-    <link rel="stylesheet" type="text/css" href="css/splitting-cells.css" />
   </head>
   <body>
 <style>
 :root {
     --color-dark: #181818;
+}
+html {
+    background-color: var(--color-dark);
 }
 body {
     background-color: var(--color-dark);
