expand workflow to build in multiple steps, and to build both the wasm and website

--- a/delightful-thyme/index.html
+++ b/delightful-thyme/index.html
@@ -64,8 +64,9 @@
       <p>[F5] : restart</p>
       <p>[F11] : fullscreen</p>
     </section>
-    <script src="./and_we_had_a_wild_thyme.js"></script>
-    <script src="./kickstart.ts" type="text/javascript"></script>
+    <!-- <script src="./and_we_had_a_wild_thyme.js"></script> -->
+    <script type="module" src="./wild-thyme/windowfx.ts"></script>
+    <script src="./wild-thyme/and_we_had_a_wild_thyme.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
