feat: ui improvements, added inventory and equipment displays

--- a/delightful-thyme/index.html
+++ b/delightful-thyme/index.html
@@ -46,7 +46,7 @@
       <p>[SPACE] : pick up, portal, interact on item you stand on</p>
       <p>[I] : inventory</p>
       <p>[D] : drop item on ground</p>
-      <p>[R] : remove (unwear/unwield) an item</p>
+      <p>[E] : remove (unwear/unwield) equipment</p>
       <p>[ENTER] : see what is on the screen (scan all)</p>
       <p>[MOUSE HOVER] : see what is on the screen (under mouse)</p>
     </section>
