feat: add virtual joystick and improve mobile ux

--- a/delightful-thyme/index.html
+++ b/delightful-thyme/index.html
@@ -51,14 +51,15 @@
           <p>[ENTER] : see what is on the screen (scan all)</p>
           <p>[MOUSE HOVER] : see what is on the screen (under mouse)</p>
         </section>
+        <div id="joystick-container"></div>
         <div id="game-controls">
             <div id="gc-button-pad">
                 <button id="gc-interact" class="gc-button">INTERACT</button>
                 <button id="gc-back" class="gc-button">BACK</button>
-                <button id="gc-up" class="gc-button gc-arrow">^</button>
-                <button id="gc-left" class="gc-button gc-arrow">&lt;</button>
-                <button id="gc-right" class="gc-button gc-arrow">&gt;</button>
-                <button id="gc-down" class="gc-button gc-arrow">v</button>
+                <!-- <button id="gc-up" class="gc-button gc-arrow">^</button> -->
+                <!-- <button id="gc-left" class="gc-button gc-arrow">&lt;</button> -->
+                <!-- <button id="gc-right" class="gc-button gc-arrow">&gt;</button> -->
+                <!-- <button id="gc-down" class="gc-button gc-arrow">v</button> -->
                 <button id="gc-inventory" class="gc-button">I</button>
                 <button id="gc-equipment" class="gc-button">E</button>
                 <button id="gc-drop" class="gc-button">D</button>
